k3s-userapps/semaphoreui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphoreui
  namespace: semaphoreui
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/pod: semaphoreui
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: semaphoreui
    spec:
      serviceAccountName: terraform
      securityContext:
        runAsUser: 0
      volumes:
        - name: semaphoreui
          persistentVolumeClaim:
            claimName: semaphoreui
      containers:
        - image: 'semaphoreui/semaphore:v2.14.10'
          imagePullPolicy: IfNotPresent
          name: semaphoreui
          livenessProbe:
            failureThreshold: 1
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          ports:
            - containerPort: 3000
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /var/lib/semaphore
              name: semaphoreui
              subPath: data
            - mountPath: /etc/semaphore
              name: semaphoreui
              subPath: config
