k3s-userapps/semaphoreui/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphoreui
  namespace: semaphoreui
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/pod: semaphoreui
  type: ClusterIP
