k3s-userapps/semaphoreui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://semaphoreui.kirillorlov.pro"
    gethomepage.dev/group: "Infra"
    gethomepage.dev/name: Semaphore UI
    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=semaphoreui"
    gethomepage.dev/icon: "https://semaphoreui.com/img/favicon.png?_2501"
  name: semaphoreui
  namespace: semaphoreui
spec:
  rules:
  - host: semaphoreui.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: semaphoreui
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - semaphoreui.kirillorlov.pro
    secretName: semaphoreui-tls
